# compal_intern_assignment2

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  nginx.conf  pyproject.toml  redis-pubsub.conf  redis.conf  todo_database.db
secrets/: postgres_password.txt
src/assignment2/: __init__.py  database.py  helper.py  main.py  models.py  postgre_database.py
src/assignment2/frontend/: helper.js  index.html
src/assignment2/static/: helper.js  index.html  stylesheet.css
