[project]
name = "assignment2"
version = "0.1.0"
description = "pounding sand"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[project.scripts]
assignment2 = "assignment2:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
