[project]
name = "assignment2"
version = "0.1.0"
description = "pounding sand"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.scripts]
assignment2 = "assignment2.main:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
